ufw/user.rules
*filter
:ufw-user-input - [0:0]
:ufw-user-output - [0:0]
:ufw-user-forward - [0:0]
:ufw-before-logging-input - [0:0]
:ufw-before-logging-output - [0:0]
:ufw-before-logging-forward - [0:0]
:ufw-user-logging-input - [0:0]
:ufw-user-logging-output - [0:0]
:ufw-user-logging-forward - [0:0]
:ufw-after-logging-input - [0:0]
:ufw-after-logging-output - [0:0]
:ufw-after-logging-forward - [0:0]
:ufw-logging-deny - [0:0]
:ufw-logging-allow - [0:0]
:ufw-user-limit - [0:0]
:ufw-user-limit-accept - [0:0]
### RULES ###

### tuple ### allow any 22 0.0.0.0/0 any 0.0.0.0/0 in
-A ufw-user-input -p tcp --dport 22 -j ACCEPT
-A ufw-user-input -p udp --dport 22 -j ACCEPT

### tuple ### allow any any 0.0.0.0/0 any 10.2.77.89 in
-A ufw-user-input -s 10.2.77.89 -j ACCEPT

### tuple ### allow any 80 0.0.0.0/0 any 0.0.0.0/0 in
-A ufw-user-input -p tcp --dport 80 -j ACCEPT
-A ufw-user-input -p udp --dport 80 -j ACCEPT

### tuple ### allow any 443 0.0.0.0/0 any 0.0.0.0/0 in
-A ufw-user-input -p tcp --dport 443 -j ACCEPT
-A ufw-user-input -p udp --dport 443 -j ACCEPT

### tuple ### allow any any 0.0.0.0/0 any 78.243.175.6 in
-A ufw-user-input -s 78.243.175.6 -j ACCEPT

### tuple ### allow any any 0.0.0.0/0 any 10.1.6.103 in
-A ufw-user-input -s 10.1.6.103 -j ACCEPT

### tuple ### allow any 1194 0.0.0.0/0 any 0.0.0.0/0 in
-A ufw-user-input -p tcp --dport 1194 -j ACCEPT
-A ufw-user-input -p udp --dport 1194 -j ACCEPT

### tuple ### allow any any 0.0.0.0/0 any 172.18.0.12 in
-A ufw-user-input -s 172.18.0.12 -j ACCEPT

### tuple ### allow any any 0.0.0.0/0 any 172.17.0.1 in
-A ufw-user-input -s 172.17.0.1 -j ACCEPT

### tuple ### allow any any 0.0.0.0/0 any 172.18.0.1 in
-A ufw-user-input -s 172.18.0.1 -j ACCEPT

### tuple ### allow any any 0.0.0.0/0 any 172.19.0.1 in
-A ufw-user-input -s 172.19.0.1 -j ACCEPT

### tuple ### allow any any 0.0.0.0/0 any 172.20.0.1 in
-A ufw-user-input -s 172.20.0.1 -j ACCEPT

### tuple ### allow any any 0.0.0.0/0 any 172.21.0.1 in
-A ufw-user-input -s 172.21.0.1 -j ACCEPT

### tuple ### allow any 3306 0.0.0.0/0 any 10.2.77.89 in
-A ufw-user-input -p tcp --dport 3306 -s 10.2.77.89 -j ACCEPT
-A ufw-user-input -p udp --dport 3306 -s 10.2.77.89 -j ACCEPT

### tuple ### allow any 10000 0.0.0.0/0 any 0.0.0.0/0 in
-A ufw-user-input -p tcp --dport 10000 -j ACCEPT
-A ufw-user-input -p udp --dport 10000 -j ACCEPT

### tuple ### allow any any 0.0.0.0/0 any 172.23.0.0/16 in
-A ufw-user-input -s 172.23.0.0/16 -j ACCEPT

### tuple ### allow any any 0.0.0.0/0 any 10.3.64.197 in
-A ufw-user-input -s 10.3.64.197 -j ACCEPT

### tuple ### allow any any 0.0.0.0/0 any 163.172.138.34 in
-A ufw-user-input -s 163.172.138.34 -j ACCEPT

### tuple ### allow any any 0.0.0.0/0 any 163.172.151.61 in
-A ufw-user-input -s 163.172.151.61 -j ACCEPT

### tuple ### allow any any 0.0.0.0/0 any 163.172.147.38 in
-A ufw-user-input -s 163.172.147.38 -j ACCEPT

### tuple ### allow any any 0.0.0.0/0 any 10.2.169.141 in
-A ufw-user-input -s 10.2.169.141 -j ACCEPT

### END RULES ###

### LOGGING ###
-A ufw-after-logging-input -j LOG --log-prefix "[UFW BLOCK] " -m limit --limit 3/min --limit-burst 10
-A ufw-after-logging-forward -j LOG --log-prefix "[UFW BLOCK] " -m limit --limit 3/min --limit-burst 10
-I ufw-logging-deny -m conntrack --ctstate INVALID -j RETURN -m limit --limit 3/min --limit-burst 10
-A ufw-logging-deny -j LOG --log-prefix "[UFW BLOCK] " -m limit --limit 3/min --limit-burst 10
-A ufw-logging-allow -j LOG --log-prefix "[UFW ALLOW] " -m limit --limit 3/min --limit-burst 10
### END LOGGING ###

### RATE LIMITING ###
-A ufw-user-limit -m limit --limit 3/minute -j LOG --log-prefix "[UFW LIMIT BLOCK] "
-A ufw-user-limit -j REJECT
-A ufw-user-limit-accept -j ACCEPT
### END RATE LIMITING ###
COMMIT
